<resources>
    <!-- Strings related to general -->
    <string name="app_name">PacLouie</string>
    <string name="louie">Louie the Laker</string>
    <string name="test">Testing something</string>
    <string name="prof">Professor trying to get Louie and take his good grades</string>
    <string name="a">A that Louie is trying to obtain</string>


    <!-- Strings related to 'Game Activity' -->
    <string name="high">Highest Score: </string>
    <string name="lives">Live Remaining: </string>
    <string name="score">Score: </string>
    <string name="lounge">The teachers lounge. Do not get caught going in or you will lose!</string>


    <!-- Strings related to 'Start Screen' -->
    <string name="Start">Press Anywhere to Start</string>
    <string name="press_to_start">Press Anywhere to Start</string>


    <!-- Strings related to 'Main Screen' -->
    <string name="play">Play Now</string>
    <string name="pressHere">Click Here to Play</string>


    <!-- Strings related to 'Settings' -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="specifyProf">Adjust Number of Professors in Game</string>
    <string name="currentNumProf">Current Number of Professors: </string>
    <string name="specifySpeed">Adjust Current Professor Movement Speed</string>
    <string name="currentNumSpeed">Current Speed: </string>
    <string name="specifyRange">Adjust the Range at which Professors Rome</string>
    <string name="currentNumRange">Current Range: </string>
    <string name="specifyLives">Adjust the Amount of Lives you want</string>
    <string name="currentNumLives">Current Number of Lives: </string>


    <!-- Strings related to 'Difficulty' -->
    <string name="title_activity_difficulty_page">difficulty_page</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="underclassmen">Underclassmen</string>
    <string name="upperclassmen">Upperclassmen</string>
    <string name="grad">Graduate</string>
    <string name="difficultyLevel">Difficulty Level</string>
    <string name="detailsUnderclassmen">Number of professors: 1, Speed: 1,
        Range: 1, Lives: 5</string>
    <string name="detailsUpperclassmen">Number of professors: 5, Speed: 5,
        Range: 5, Lives: 3</string>
    <string name="detailsGraduate">Number of professors: 9, Speed: 9,
        Range: 9, Lives: 1</string>


    <!-- Strings related to 'Highscore' -->
    <string name="highscore">Highscores</string>
    <string name="highscore1">1. </string>
    <string name="highscore2">2. </string>
    <string name="highscore3">3. </string>
    <string name="highscore4">4. </string>
    <string name="highscore5">5. </string>
    <string name="highscore6">6. </string>
    <string name="highscore7">7. </string>
    <string name="highscore8">8. </string>
    <string name="highscore9">9. </string>
    <string name="highscore10">10. </string>
    <string name="lastScore">Most Recent Score: </string>
    <string name="resetScores">Reset Highscores</string>



    <!-- Strings related to 'About' -->
    <string name="about">About</string>
    <string name="about_development">About the Development: </string>
    <string name="development_1"> PacLouie was developed by Blake Lapum, Jay Brunsting,
        and Ryan Eisenbart for CIS 350, Software Engineering. </string>
    <string name="about_directions">Customizing Your Play:</string>
    <string name="customize_play"> Pick a difficulty by selecting "Difficulty", or customize your
        own difficulty by selecting settings and set the number of professors, speed, range,
        and number of lives. </string>
    <string name="about_goals">Goals of the Game: </string>
    <string name="goals_1">1. Avoid being hit by professors (Each time you get hit, you lose a life)
    </string>
    <string name="goals_2">2. Gather as many A\'s you can and reach new high scores. Speed, range, and number of professors determine how many points each \'A\' is worth. </string>
    <string name="goals_3"> 3. Avoid the teachers lounge. If you go inside, you will instantly lose!</string>
    <string name="releaseInfo">Release 2.0.0, 12/07/2018</string>



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
